[metadata]
name = torchfields
url = https://github.com/seung-lab/torchfields
summary = A PyTorch add-on for working with image mappings and displacement fields, including Spatial Transformers
description-content-type = text/markdown
description-file = README.md
author = Barak Nehoran
author_email = bnehoran@users.noreply.github.com
home-page = https://github.com/seung-lab/torchfields
license = MIT
classifiers =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages = torchfields
