[metadata]
name = torchfields
url = https://github.com/seung-lab/torchfields
summary = A PyTorch add-on for working with image mappings and displacement fields, including Spatial Transformers
description-content-type = text/markdown
description-file = README.md
author = Barak Nehoran, Nico Kemnitz
author_email = bnehoran@users.noreply.github.com, nkemnitz@users.noreply.github.com
home-page = https://github.com/seung-lab/torchfields
license = MIT
classifiers =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages = torchfields
